--- a/ICE/ICE-Responsive/css/responsive.css
+++ b/ICE/ICE-Responsive/css/responsive.css
@@ -1,13 +1,8 @@
-@media only screen and (max-width: 850px) {
-	.top-nav ul li {
-		display: block;
-	}
-}
+
 
 @media only screen and (min-width: 650px) {
-	.top-nav ul {
+	.top-nav {
 		width: 100%;
-		margin: 0 auto;
 		display: inline-block;
 		text-align: center;
 	}
@@ -18,12 +13,13 @@
 
 	.yellow {
 		width: 48%;
-		float: left;
+    float: left;
 		display: inline-block;
 	}
 
-	.purple {
+	.blu-purple {
 		width: 48%;
+    float right;
 		display: inline-block;
 	}
 }
@@ -32,39 +28,41 @@
 	.black {
 		width: 48%;
 		float: left;
-		display: inline-block;
+		display: inline-block; vertical-align: top;
 	}
 
-	.pink {
+	.maroon {
 		width: 48%;
+    float right;
 		display: inline-block;
 	}
 
 	.yellow {
 		width: 23%;
-		float: left;
-		display: inline-block;
+    float: left;
+		display: inline-block; vertical-align: top;
 	}
 
-	.purple {
+	.blu-purple {
 		width: 23%;
 		display: inline-block;
 	}
 
 	.green {
 		width: 48%;
-		display: inline-block;
-		float: right;
+    float: right;
+		display: inline-block; vertical-align: top;
 	}
 
 	.blue {
 		width: 48%;
-		float: left;
-		display: inline-block;
+    float left;
+		display: inline-block; vertical-align: top;
 	}
 
 	.red {
 		width: 48%;
-		display: inline-block;
+    float: right;
+		display: inline-block; vertical-align: top;
 	}
 }
