--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -13,9 +13,10 @@
 }
 
 .header .header_1 h1{
+	padding-left: 0px;
 	float: left;
-	font: normal 28px;
-	font-family: 'Lobster', cursive;
+	font: normal 100px;
+	font-family: 'Lobster', Arial, cursive;
 	line-height: 40px;
 	margin: 0;
 }
@@ -32,7 +33,8 @@
 }
 
 .header .header_1 nav{
-	font:15px Arial, Helvetica, sans-serif;
+	font:20px;
+	font-family: 'Josefin Sans', Arial, sans-serif;
 	line-height: 40px;
 	float: right;
 }
