--- a/portfolio/css/yolo.css
+++ b/portfolio/css/yolo.css
@@ -1,4 +1,4 @@
-@import url('http://fonts.googleapis.com/css?family=Open+Sans:400,700');
+
 
 html{
 	background-color: #eaf0f2;
@@ -10,31 +10,31 @@ body{
 	margin:0;
 }
 
-.menu{
+.main{
 	text-align: center;
 	padding-top: 25px;
 	margin-bottom:200px;
 }
 
-.menu img{
+.main img{
 	opacity: 0.4;
 	margin: 20px auto;
 }
 
-.menu h1{
+.main h1{
 	margin-top:0;
 	font: normal 32px/1.5 'Open Sans', sans-serif;
 	color: #3F71AE;
 	padding-bottom: 16px;
 }
 
-.menu h2{
+.main h2{
 	color: #F05283;
 }
 
 
 @media (max-height:800px){
-	.menu { padding-top:40px; }
+	.main { padding-top:40px; }
 }
 
 
