--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -13,9 +13,9 @@
 }
 
 .header .header_1 h1{
-	padding-left: 0px;
 	float: left;
-	font: normal 100px;
+	font: normal;
+	font-size: 35px;
 	font-family: 'Lobster', Arial, cursive;
 	line-height: 40px;
 	margin: 0;
@@ -33,7 +33,7 @@
 }
 
 .header .header_1 nav{
-	font:20px;
+	font-size:20px;
 	font-family: 'Josefin Sans', Arial, sans-serif;
 	line-height: 40px;
 	float: right;
