--- a/portfolio/css/responsive.css
+++ b/portfolio/css/responsive.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 1000px){
+@media only screen and (min-width: 650px){
 
 	.proj p{
 		overflow-wrap: break-word;
@@ -28,13 +28,6 @@
     float right;
 		display: inline-block; vertical-align: top;
 	}
-  .proj .eccstwoeight {
-    width: 48%;
-    height: 600px;
-		float: right;
-		display: inline-block; vertical-align: top;
-
-	}
 	.proj .eecsfour {
     width: 48%;
     height: 600px;
@@ -50,6 +43,54 @@
 	}
 	.proj .twooh {
     width: 48%;
+    height: 700px;
+    float right;
+		display: inline-block; vertical-align: top;
+	}
+}
+@media only screen and (min-width: 1000px){
+
+	.proj p{
+		overflow-wrap: break-word;
+	}
+	.proj .itt {
+    width: 30%;
+    height: 500px;
+		float: left;
+		display: inline-block; vertical-align: top;
+	}
+	.proj .tx {
+    width: 30%;
+    height: 500px;
+    float right;
+		display: inline-block;
+	}
+	.proj .opena {
+    width: 30%;
+    height: 500px;
+		display: inline-block; vertical-align: top;
+
+	}
+	.proj .eecsthree {
+    width: 30%;
+    height: 600px;
+    float left;
+		display: inline-block; vertical-align: top;
+	}
+
+	.proj .eecsfour {
+    width: 30%;
+    height: 600px;
+		display: inline-block; vertical-align: top;
+	}
+  .proj .ikea {
+    width: 30%;
+    height: 700px;
+		display: inline-block; vertical-align: top;
+
+	}
+	.proj .twooh {
+    width: 30%;
     height: 700px;
     float right;
 		display: inline-block; vertical-align: top;
