--- a/portfolio/css/yolo.css
+++ b/portfolio/css/yolo.css
@@ -38,3 +38,10 @@ body{
   max-width: 500px;
   max-height: 500px;
 }
+
+.itt img{
+	height: auto;
+  width: auto;
+  max-width: 400px;
+  max-height: 500px;
+}
