--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -33,6 +33,9 @@
 	color: #00008B;
 	text-decoration: none;
 }
+.header .header_1 a:hover {
+	background-color: yellow;
+}
 
 .header .header_1 nav{
 	font-size:20px;
