--- a/portfolio/css/yolo.css
+++ b/portfolio/css/yolo.css
@@ -8,9 +8,7 @@ body{
 	margin:0;
 }
 #background {
-	background:url('https://i0.wp.com/res.cloudinary.com/aleteia/image/fetch/c_fill,g_auto,w_620,h_310/https://aleteiaen.files.wordpress.com/2017/07/web3-red-wheelbarrow-chickens-poem-poetry-what-depends-upon-a-red-wheelbarrow-william-carlos-williams-a-poem-a-day-project.jpg?resize=620%2C310&quality=100&strip=all&ssl=1'),url('https://jacket2.org/sites/jacket2.org/files/imagecache/wide_main_column/red_wheelbarrowpic.jpg');
-	background-repeat: no-repeat;
-	background-position: left top, right top;
+	background:url('https://topbackgroundwallpaper.com/wp-content/uploads/2018/04/wallpaper-background-hd-8461.jpg');
 }
 
 .main{
